# soa

.cache/clangd/index/: Controller.cpp.2E932E8A8BD6730F.idx  Controller.h.FA33146C68CA195E.idx  Mutex.cpp.7CDEC02EFB617109.idx  Mutex.h.3BF5A2FCF6CF2260.idx  NativeSerializer.cpp.DE3EA69D687CA29A.idx  Request.cpp.FC2E1C9AE9F948BB.idx  Request.h.71DFC0577CF52D37.idx  RequestHandler.h.B20B474E99522596.idx  Response.cpp.141C54F23121AA04.idx  Response.h.EFCB32331372C36F.idx  SerializationTester.cpp.73284F7CC73CE861.idx  SerializationTester.cpp.EA8289C4276268DE.idx  SerializationTester.h.F15DBE49D23125A8.idx  Serializer.cpp.14CFC27BAE96D168.idx  Serializer.h.B40A8EBD7F319EFE.idx  Server.cpp.FC3B1274EE3B387A.idx  Server.h.67FB549C67E46AE8.idx  Session.cpp.6C49C3B85D03DAAA.idx  Session.h.0627573DD40CE886.idx  Sessions.cpp.E850EBADB0534760.idx  Sessions.h.56BD94A07DF90117.idx  StreamResponse.cpp.DF6B871BE99A22B4.idx  StreamResponse.h.0D6B24EA8074D42A.idx  UploadFile.cpp.2B95F1679BA1186C.idx  UploadFile.h.38778F22BA6D11C3.idx  Utils.cpp.5F3DA13A00D99DDE.idx  Utils.h.770AA0088EBFD79D.idx  WebController.cpp.85F51F6476EC125D.idx  WebController.h.C2630069D6ECA06C.idx  WebSocket.h.63BB4E76E1A31D04.idx  WebSockets.h.114F5C0DFE0104C3.idx  main.cpp.AA13E63D22E78F27.idx  mongoose.c.6500A8BA74DF40CA.idx  mongoose.h.C3585941F485E0B5.idx  proxy.cpp.E7EEA962BC52AFA1.idx  proxy.h.7727067CC766E629.idx  tick.cpp.CFAA283C1DA0F05A.idx  tick.h.65023A7C465E4C36.idx
hw1/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  make_query.py
hw1/src/: CMakeLists.txt  SerializationTester.cpp  SerializationTester.h  main.cpp  proxy.cpp  proxy.h
hw1/src/lib/avro-cpp-1.11.1/: test6.df  test9.df  test_readRecordUsingLastSync.df  test_skip.df
hw1/src/lib/avro-cpp-packaging/: test6.df
hw1/src/lib/mongoose-cpp/: CMakeLists.txt
hw1/src/lib/msgpack-c/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt  msgpack-cxx-config-version.cmake  msgpack-cxx-config.cmake
hw1/src/lib/protos/: test_data.pb.cc  test_data.pb.h  test_data.proto
hw1/src/serializers/: AvroSerializer.cpp  AvroSerializer.h  JSONSerializer.cpp  JSONSerializer.h  MessagePackSerializer.cpp  MessagePackSerializer.h  NativeSerializer.cpp  NativeSerializer.h  ProtoSerializer.cpp  ProtoSerializer.h  Serializer.cpp  Serializer.h  XMLSerializer.cpp  XMLSerializer.h  YamlSerializer.cpp  YamlSerializer.h
hw1/src/tools/: CMakeLists.txt  tick.cpp  tick.h
hw2/: Dockerfile  README.md  docker-compose.yaml  requirements.txt  run_client.sh
hw2/src/: client.py  mafia.proto  mafia_pb2.py  mafia_pb2_grpc.py  server.py
hw3/: README.md  docker-compose.yaml  requirements.txt  run_client.sh
hw3/src/: chat.py  client.py  mafia.proto  mafia_pb2.py  mafia_pb2_grpc.py  server.py
